Media API is complete and tested (for now)